--- a/Sharaku/Classes/SHViewController.xib
+++ b/Sharaku/Classes/SHViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,42 +23,14 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7L6-vm-VNv">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UMQ-jD-qtt">
-                            <rect key="frame" x="329" y="24" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="Pd3-Sr-LNh"/>
-                                <constraint firstAttribute="width" secondItem="UMQ-jD-qtt" secondAttribute="height" multiplier="1:1" id="dVI-W1-c33"/>
-                            </constraints>
-                            <state key="normal" image="ic_check"/>
-                            <connections>
-                                <action selector="doneButtontapped" destination="-1" eventType="touchUpInside" id="ESb-jg-Nma"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1yM-fz-Bt9">
-                            <rect key="frame" x="16" y="24" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="1yM-fz-Bt9" secondAttribute="height" multiplier="1:1" id="obz-Sr-xsZ"/>
-                            </constraints>
-                            <state key="normal" image="ic_close"/>
-                            <connections>
-                                <action selector="closeButtonTapped" destination="-1" eventType="touchUpInside" id="JN6-fw-xYX"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.8784313725490196" green="0.011764705882352941" blue="0.29019607843137252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="UMQ-jD-qtt" secondAttribute="trailing" constant="16" id="RIk-kn-EI6"/>
-                        <constraint firstItem="1yM-fz-Bt9" firstAttribute="top" secondItem="7L6-vm-VNv" secondAttribute="top" constant="24" id="Wwo-dI-AyZ"/>
-                        <constraint firstItem="1yM-fz-Bt9" firstAttribute="height" secondItem="UMQ-jD-qtt" secondAttribute="height" id="jb8-Ru-fXU"/>
-                        <constraint firstItem="1yM-fz-Bt9" firstAttribute="leading" secondItem="7L6-vm-VNv" secondAttribute="leading" constant="16" id="p5S-tg-gjF"/>
-                        <constraint firstItem="UMQ-jD-qtt" firstAttribute="centerY" secondItem="1yM-fz-Bt9" secondAttribute="centerY" id="pSp-kH-9AJ"/>
                         <constraint firstAttribute="height" constant="64" id="tUj-Mh-dbu"/>
                     </constraints>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Szh-NV-86B">
                     <rect key="frame" x="0.0" y="475" width="375" height="184"/>
-                    <color key="backgroundColor" red="0.16078431372549018" green="0.16078431372549018" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.8784313725490196" green="0.011764705882352941" blue="0.29019607843137252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="184" id="s9Z-JS-x14"/>
                     </constraints>
@@ -85,7 +57,7 @@
                     </connections>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="0.16078431372549018" green="0.16078431372549018" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.8784313725490196" green="0.011764705882352941" blue="0.29019607843137252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="dv8-Gc-a6m" firstAttribute="top" secondItem="7L6-vm-VNv" secondAttribute="bottom" id="3v2-4T-9Fk"/>
                 <constraint firstAttribute="trailing" secondItem="Szh-NV-86B" secondAttribute="trailing" id="6dB-HL-1O0"/>
@@ -110,8 +82,4 @@
             </connections>
         </swipeGestureRecognizer>
     </objects>
-    <resources>
-        <image name="ic_check" width="48" height="48"/>
-        <image name="ic_close" width="48" height="48"/>
-    </resources>
 </document>
